<resources>
    <string name="app_name">Ess-Manager</string>
    <string name="sell">Sell</string>
    <string name="verify">Verify</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="serial_number">Serial number</string>
    <string name="sales">Sales</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="record_sale">Record Sale</string>
    <string name="a1">a1</string>
    <string name="a2">a2</string>
    <string name="a3">a3</string>
    <string name="a4">a4</string>
    <string name="a5">a5</string>
    <string name="security_code">Security code</string>
    <string name="validate">Validate</string>
    <string name="account_number">Account number</string>
    <string name="select_a_bank">Select a bank</string>
    <string name="cancel">Cancel</string>
    <string name="redeem">Redeem</string>
    <string name="done">Done</string>
    <string name="loading">Loading...</string>
    <string name="logout">logout</string>
</resources>